# magazyn_projekt

./: CMakeLists.txt  Magazyn.cpp  Magazyn.h  Paleciak.cpp  Paleciak.h  Produkt.cpp  Produkt.h  Towar.cpp  Towar.h  TowarCiekly.h  TowarCielky.cpp  TowarSypki.cpp  TowarSypki.h  Wyjątki.h  interfejs.cpp  interfejs.h  main.cpp  readme.txt  stdin.txt  stdin2.txt
