cmake_minimum_required(VERSION 3.17)
project(DragArkadiusz-etap3)

set(CMAKE_CXX_STANDARD 14)

add_executable(DragArkadiusz-etap2 main.cpp Towar.cpp Towar.h Magazyn.h Magazyn.cpp interfejs.h interfejs.cpp TowarSypki.h Produkt.h Produkt.cpp TowarSypki.cpp TowarCiekly.h TowarCielky.cpp Paleciak.h Paleciak.cpp Exceptions.h)
